be/src/runtime/mem-tracker.h
@@ -334,6 +334,13 @@ class MemTracker {
   /// Logs the usage of this tracker and all of its children (recursively).
   std::string LogUsage(const std::string& prefix = "") const;
 
+  /// Log the memory usage when memory limit is exceeded and return a status object with
+  /// details of the allocation which caused the limit to be exceeded.
+  /// If 'failed_allocation_size' is greater than zero, logs the allocation size. If
+  /// 'failed_allocation_size' is zero, nothing about the allocation size is logged.
+  Status MemLimitExceeded(RuntimeState* state, const std::string& details,
+      int64_t failed_allocation = 0);
+
   void EnableLogging(bool enable, bool log_stack) {
     enable_logging_ = enable;
     log_stack_ = log_stack;
